package cn.snwalker.design.structural.proxy.JDK_proxy;

import java.lang.reflect.InvocationHandler;
import java.lang.reflect.Method;
import java.lang.reflect.Proxy;

/**
 * 代理工厂（并不是代理对象的类，只提供获取代理对象的方法）
 */
public class ProxyFactory {
    private TrainStation trainStation = new TrainStation();

    // 获取代理对象
    public SellTickets getProxyObject() {
        // 使用动态代理类Proxy提供的方法获取代理对象
        /*
            newProxyInstance()方法参数说明：
            ClassLoader loader ： 类加载器，用于加载代理类，使用真实对象的类加载器即可
            Class<?>[] interfaces ： 真实对象所实现的接口，代理模式真实对象和代理对象实现相同的接口
            InvocationHandler h ： 代理对象的调用处理程序
         */
        SellTickets proxyObject = (SellTickets) Proxy.newProxyInstance(
                trainStation.getClass().getClassLoader(),
                trainStation.getClass().getInterfaces(),
                new InvocationHandler() {
                    /*
                        InvocationHandler中invoke方法参数说明：
                        proxy ： 代理对象
                        method ： 对应于在代理对象上调用的接口方法的 Method 实例
                        args ： 代理对象调用接口方法时传递的实际参数
                     */
                    @Override
                    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
                        System.out.println("代理点收取一定的服务费（JDK动态代理方式）");
                        // 执行真实对象
                        Object result = method.invoke(trainStation, args);
                        return result;
                    }
                }
        );
        return proxyObject;
    }
}
