package cn.snwalker.design.structural.proxy.JDK_proxy;

/**
 * 卖票接口（抽象主题类）
 */
public interface SellTickets {
    public void sell();
}
